@@ -8,7 +8,6 @@ import com.geml.taska.models.User;
 import com.geml.taska.repository.TaskRepository;
 import com.geml.taska.repository.UserRepository;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.web.server.ResponseStatusException;
@@ -37,8 +36,7 @@ public class TaskService {
             : taskRepository.findAll();
 
         return tasks.stream()
-                .map(taskMapper::toDisplayTaskDto)
-                .collect(Collectors.toList());
+                .map(taskMapper::toDisplayTaskDto).toList();
     }
 
 
